<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.camunda.community</groupId>
    <artifactId>community-hub-release-parent</artifactId>
    <version>1.4.4</version>
    <relativePath/>
  </parent>

  <artifactId>bpmn-driven-testing-root</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>gradle-plugin</module>
    <module>impl</module>
    <module>maven-plugin</module>
    <module>model</module>
  </modules>

  <properties>
    <version.java>21</version.java>
    <maven.compiler.release>8</maven.compiler.release>

    <!-- Versions -->
    <camunda.bpm.version>7.19.0</camunda.bpm.version>
    <camunda.zeebe.version>8.4.4</camunda.zeebe.version>
    <google.truth.version>1.1.5</google.truth.version>
    <javapoet.version>1.13.0</javapoet.version>
    <junit.jupiter.version>5.10.1</junit.jupiter.version>
    <robotframework.version>4.1.2</robotframework.version>
    <slf4j.version>1.7.36</slf4j.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.camunda.community</groupId>
        <artifactId>bpmn-driven-testing-impl</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.camunda.community</groupId>
        <artifactId>bpmn-driven-testing-impl-8</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.camunda.community</groupId>
        <artifactId>bpmn-driven-testing-model</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Camunda -->
      <dependency>
        <groupId>org.camunda.bpm</groupId>
        <artifactId>camunda-bom</artifactId>
        <version>${camunda.bpm.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.camunda</groupId>
        <artifactId>zeebe-bom</artifactId>
        <version>${camunda.zeebe.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>com.squareup</groupId>
        <artifactId>javapoet</artifactId>
        <version>${javapoet.version}</version>
      </dependency>

      <!-- Test -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit.jupiter.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.truth</groupId>
        <artifactId>truth</artifactId>
        <version>${google.truth.version}</version>
        <exclusions>
          <exclusion>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>org.robotframework</groupId>
        <artifactId>robotframework</artifactId>
        <version>${robotframework.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M6</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>community-action-maven-release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <!-- Prevent gpg from using pinentry programs -->
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <name>BPMN Driven Testing</name>
  <description>Camunda extension, which is able to generate test code based on an extended BPMN model</description>
  <url>https://github.com/camunda-community-hub/bpmn-driven-testing</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>gclaussn</id>
      <name>Gabor Claußnitzer</name>
      <organization>cimt objects ag</organization>
      <organizationUrl>https://www.cimt-ag.de/</organizationUrl>
    </developer>
    <developer>
      <id>jwhoeche</id>
      <name>John-Wieland Höche</name>
      <organization>cimt objects ag</organization>
      <organizationUrl>https://www.cimt-ag.de/</organizationUrl>
    </developer>
  </developers>

  <scm>
    <url>scm:git:git@github.com:camunda-community-hub/bpmn-driven-testing.git</url>
    <connection>scm:git:git@github.com:camunda-community-hub/bpmn-driven-testing.git</connection>
    <developerConnection>scm:git:git@github.com:camunda-community-hub/bpmn-driven-testing.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/camunda-community-hub/bpmn-driven-testing/issues</url>
  </issueManagement>
</project>
